src/snapshots/parse_idb@ls__ls-v700.i64__database_creation_version.snap
---
hash: AECB563D13A0A57A
source: src/test.rs
expression: database_creation_version
---
Some("7.00\0")