src/snapshots/parse_idb@ls__ls-v700.i64__file_regions.snap
---
hash: FE896F60C13499B7
source: src/test.rs
expression: file_regions
---
[
 (
  start: 4194304,
  end: 4300100,
  eva: 0,
 ),
 (
  start: 6397424,
  end: 6399476,
  eva: 105968,
 ),
]