src/snapshots/parse_idb@ls__ls-v700.i64__input_file.snap
---
source: src/test.rs
expression: input_file
---
"C:\\Users\\user\\Downloads\\bitness\\pyidb-bitness\\ls\u0000"
