src/snapshots/parse_idb@ls__ls-v700.i64__input_file_md5.snap
---
hash: 80F921F588F6C85D
source: src/test.rs
expression: input_file_md5
---
Some((79, 66, 143, 149, 116, 14, 201, 53, 18, 87, 102, 222, 91, 170, 138, 13))